--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -1,3 +1,11 @@
+:root {
+  --darkest: #0b0c10;
+  --second-dark: #1f2833;
+  --highlights: #c5c6c7;
+  --primary: #66fcf1;
+  --secondary: #45a29e;
+}
+
 html, body {
     padding: 0;
     margin: 0;
@@ -10,10 +18,10 @@ html, body {
     
     /*Gradient Background*/
     /* background-color: #FF3CAC;
-    background-image: linear-gradient(225deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%); */
-    
-    /* Single Color Background */
-    background-color: #1a1a1d;
+    background-image: linear-gradient(225deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%);
+     */   
+     /* Single Color Background */
+    background-color: var(--second-dark);
 
     background-position: center;
     background-size: cover;
@@ -23,7 +31,7 @@ html, body {
 }
 
 #loginContainer * {
-    color: #ffffff;
+    color: var(--highlights);
     font-family: "Quicksand";
     font-weight: normal;
     line-height: 1em;
@@ -38,19 +46,19 @@ html, body {
 }
 
 ::placeholder { /* Most modern browsers support this now. */
-   color:    #4e4e50;
+   color: var(--highlights);
 }
 
 #inputContainer {
     width: 400px;
     padding: 45px;
     float: left;
-    border-right: 1px solid #4e4e50;
+    border-right: 1px solid var(--darkest);
 }
 
 #inputContainer h2 {
     text-align: center;
-    color: #fff;
+    color: var(--highlights);
 }
 
 #inputContainer input[type='text'],
@@ -59,19 +67,29 @@ html, body {
     display: block;
     background-color: transparent;
     border: none;
-    border-bottom: 1px solid #950740;
+    border-bottom: 1px solid var(--secondary);
     width: 100%;
     height: 27px;
     line-height: 27px;
 }
 
-#inputContainer label {
-    color: #6f2232;
-    font-size: 13px;
-    margin-top: 15px;
+#inputContainer input[type='text']:focus,
+#inputContainer input[type='email']:focus,
+#inputContainer input[type='password']:focus {
+    border: none;
+    outline: 1px solid var(--secondary);
 }
 
-#inputContainer button {
+#inputContainer label {
+    color: var(--primary);
+    font-size: 13px;
+    margin-top: 15px;
+    display: block;
+}
+
+
+/* Button */
+/* #inputContainer button {
     background-color: transparent;
     border: 2px solid #c3073f;
     border-radius: 250px;
@@ -86,13 +104,112 @@ html, body {
 
 #inputContainer button:hover {
     cursor: pointer;
+} */
+
+#inputContainer button{
+    background-color: transparent;
+    border: 2px solid var(--primary);
+    border-radius: 3rem;
+    color: var(--highlights);
+    font-size: 14px;
+    overflow: hidden;
+    /* padding: 1rem 2rem; */
+    position: relative;
+    text-decoration: none;
+    transition: .2s transform ease-in-out;
+    will-change: transform;
+    z-index: 0;
+    font-size: 14px;
+    letter-spacing: 1px;
+    margin: 20px auto;
+    height: 41px;
+    width: 100%;    
+
+}
+#inputContainer button::after {
+    background-color: var(--primary);
+    border-radius: 3rem;
+    content: '';
+    display: block;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    transform: translate(-100%, 0) rotate(10deg);
+    transform:-origin top left;
+    transition: .2s transform ease-out;
+    will-change: transform;
+    z-index: -1;
+}
+
+#inputContainer button:hover::after {
+    transform: translate(0, 0);
+}
+
+#inputContainer button:hover {
+    border: 2px solid transparent;
+    color: var(--darkest);
+    transform: scale(1.05);
+    will-change: transform;
+}
+
+
+/* Button End */
+
+#hideRegister,
+#hideLogin {
+    transition: .3s ease-in-out;
+}
+
+#hideRegister:hover,
+#hideLogin:hover {
+    color: var(--secondary);
 }
 
 .hasAccountText span {
     font-size: 12px;
     font-weight: 500;
+    cursor: pointer;
 }
 
 .hasAccountText {
     text-align: center;
+}
+
+#registerForm,
+#loginForm {
+    display: none;
+}
+
+#loginText {
+    padding: 45px;
+    display: table-cell;
+}
+
+#loginText h1 {
+    color: var(--primary);
+    font-size: 60px;
+    font-weight: bold;
+}
+
+#loginText h2 {
+    margin: 35px 0;
+}
+
+#loginText ul {
+    padding: 0;
+}
+
+#loginText li {
+    font-size: 20px;
+    list-style-type: none;
+    padding: 5px 30px;
+    background: url(../images/icons/icons8_checkmark_24px_2.png) no-repeat left center;
+}
+
+#inputContainer .errorMessage {
+    color: var(--highlights);
+    font-size: 12px;
+    display: block;
 }
