--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,3 +151,63 @@ html, body {
 .volumeBar .progressBar {
     width: 125px;
 }
+
+#topContainer {
+    min-height: 100%;
+    width: 100%;
+}
+
+#topContainer #navBarContainer {
+    background-color: var(--darkest);
+    width: 220px;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+#topContainer .navBar {
+    padding: 25px;
+    display: flex;
+    flex-direction: column;
+    -ms-flex-direction: column;
+}
+
+.logo {
+    margin-bottom: 15px;
+}
+
+.logo img {
+    width: 32px;
+}
+
+.navBar .group {
+    border-top: 1px solid var(--highlights);
+    padding: 10px 0;
+}
+
+.navItem {
+    padding: 10px 0;
+    font-size: 14px;
+    font-weight: 500;
+    display: block;
+    letter-spacing: 1px;
+    position: relative;
+}
+
+.navItemLink {
+    color: var(--highlights);
+    text-decoration: none;
+    transition: .3s;
+}
+
+.navItemLink:hover {
+    color: var(--secondary);
+}
+
+.navItemLink .icon {
+    position: absolute;
+    right: 0;
+    top: 6px;
+    width: 25px;
+}
