--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -1,6 +1,7 @@
 :root {
   --darkest: #0b0c10;
   --second-dark: #1f2833;
+  --third-dark: #435060;
   --highlights: #c5c6c7;
   --primary: #66fcf1;
   --secondary: #45a29e;
@@ -13,15 +14,15 @@ html, body {
 }
 
 #background {
-    background-color:#000000;
-    background-image: url(../images/Rick.png);
+    /* background-color:#000000;
+    background-image: url(../images/Rick.png); */
     
     /*Gradient Background*/
     /* background-color: #FF3CAC;
     background-image: linear-gradient(225deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%);
      */   
      /* Single Color Background */
-    /* background-color: var(--second-dark); */
+    background-color: var(--second-dark);
 
     background-position: center;
     background-size: cover;
