--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -264,3 +264,37 @@ body {
 .gridViewItem a {
     text-decoration: none;
 }
+
+.entityInfo {
+    padding: 35px 0 10px 0;
+    display: inline-block;
+    width: 100%;
+}
+
+.entityInfo .leftSection {
+    width: 30%;
+    float: left;
+    max-width: 350px;
+}
+
+.entityInfo .leftSection img {
+    width: 100%
+}
+
+.entityInfo .rightSection {
+    width: 70%;
+    float: left;
+    padding: 5px 10px 5px 40px;
+    box-sizing: border-box;
+}
+
+.entityInfo .rightSection h2 {
+    margin-top: 0px;
+    font-weight: 700;
+    font-size: 28px;
+}
+
+.entityInfo .rightSection span {
+    color: var(--highlights);
+    font-weight: 200;
+}
