--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -377,3 +377,25 @@ body {
     float: left;
     text-align: right;
 }
+
+.artistInfo {
+    text-align: center;
+}
+
+.button {
+    cursor: pointer;
+    color: var(--highlights);
+    margin-bottom: 10px;
+    background-color: transparent;
+    font-weight: 500;
+    letter-spacing: 2px;
+    border: 2px solid var(--highlights);
+    border-radius: 15px;
+    min-width: 130px;
+}
+
+.button.blue {
+    background-color: var(--primary);
+    border-color: var(--primary);
+    color: var(--darkest);
+}
