--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -415,3 +415,44 @@ body {
 [role="link"] {
     cursor: pointer;
 }
+
+.searchContainer {
+    background-color: var(--second-dark);
+    padding: 20px 28px;
+}
+
+.searchContainer h4 {
+    margin: 0;
+    font-weight: 300;
+}
+
+.searchContainer .searchInput{
+    width: 100%;
+    background-color: transparent;
+    border: none;
+    color: #fff;
+    font-weight: 700;
+    font-size: 62px;
+    letter-spacing: 2px;
+}
+
+input:focus {
+    outline: none;
+}
+
+button:focus {
+    outline: none;
+}
+
+
+.searchResultRow {
+    padding: 15px 10px;
+}
+
+.searchResultRow:hover {
+    background-color: var(--second-dark);
+}
+
+.searchResultRow artistName span {
+    color: #fff;
+}
