--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -408,7 +408,8 @@ body {
 }
 
 .trackListContainer h2,
-.gridViewContainer h2 {
+.gridViewContainer h2,
+.artistContainer h2 {
     text-align: center;
 }
 
@@ -455,4 +456,9 @@ button:focus {
 
 .searchResultRow artistName span {
     color: #fff;
+}
+
+.noResults {
+    display: block;
+    margin: 15px;
 }
