Color scheme change (dark theme)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 :root {
-  --darkest: #0b0c10;
+  --background: #0b0c10;
   --second-dark: #1f2833;
   --third-dark: #435060;
   --highlights: #c5c6c7;
@@ -20,14 +20,14 @@ html, body {
 }
 
 body {
-    background-color: var(--third-dark);
+    background-color: #121212;
     font-size: 14px;
     min-width: 720px;
 }
 
 #nowPlayingBarContainer {
     width: 100%;
-    background-color: var(--second-dark);
+    background-color: #000000;
     bottom: 0;
     position: fixed;
     /*height: 100px; remove later */
@@ -95,7 +95,7 @@ body {
 }
 
 .progressTime {
-    color: var(--highlights);
+    color: #fff;
     font-size: 11px;
     min-width: 40px;
     text-align: center;
@@ -113,14 +113,14 @@ body {
 }
 
 .progressBarBg {
-    background-color: var(--third-dark);
+    background-color: #121212;
     height: 4px;
     width: 100%;
     border-radius: 2px;
 }
 
 .progress {
-    background-color: var(--highlights);
+    background-color: #fff;
     height: 4px;
     width: 0;
     border-radius: 2px;
@@ -146,7 +146,7 @@ body {
 
 #nowPlayingLeft .trackInfo .artistName span {
     font-size: 12px;
-    color: var(--highlights);
+    color: #c5c6c7;
 }
 
 .volumeBar {
@@ -164,8 +164,8 @@ body {
     width: 100%;
 }
 
-#topContainer #navBarContainer {
-    background-color: var(--darkest);
+#topContainer #navBarContainer {  /* sidebar */
+    background-color: #000000;
     width: 220px;
     height: 100vh;
     position: fixed;
@@ -188,8 +188,8 @@ body {
     width: 32px;
 }
 
-.navBar .group {
-    border-top: 1px solid var(--highlights);
+.navBar .group {  /* sidebar horizontal lines */
+    border-top: 1px solid #fff;
     padding: 10px 0;
 }
 
@@ -202,14 +202,14 @@ body {
     position: relative;
 }
 
-.navItemLink {
-    color: var(--highlights);
+.navItemLink {  /* sidebar text */
+    color: #c5c6c7;
     text-decoration: none;
     transition: .3s;
 }
 
-.navItemLink:hover {
-    color: var(--primary);
+.navItemLink:hover {  /* sidebar hover */
+    color: #66fcf1;
 }
 
 .navItemLink .icon {
@@ -259,8 +259,8 @@ body {
     transition: 0.5s;
 }    
 
-.gridViewItem:hover .gridViewInfo {
-    color: var(--primary);
+.gridViewItem:hover .gridViewInfo {  /* Album icon name hover */
+    color: #66fcf1;
 }
 
 .gridViewItem a {
@@ -296,8 +296,8 @@ body {
     font-size: 28px;
 }
 
-.entityInfo .rightSection p {
-    color: var(--highlights);
+.entityInfo .rightSection p {  /* Album page - artist info and song count */
+    color: #c5c6c7;
     font-weight: 200;
 }
 
@@ -312,12 +312,12 @@ body {
 }
 
 .trackListRow span {
-    color: var(--highlights);
+    color: #c5c6c7;
     font-weight: 200;
 }
 
 .trackListRow:hover {
-    background-color: var(--second-dark);
+    background-color: rgba(255, 255, 255, .1);
 }
 
 .trackListRow .trackCount {
@@ -350,7 +350,7 @@ body {
 }
 
 .trackListRow .trackInfo .trackName {
-    color: white;
+    color: #fff;
     font-weight: 400;
     margin-bottom: 7px;
 }
@@ -386,25 +386,25 @@ body {
 
 .button {
     cursor: pointer;
-    color: var(--highlights);
+    color: #fff;
     margin-bottom: 10px;
     background-color: transparent;
     font-weight: 500;
     letter-spacing: 2px;
-    border: 2px solid var(--highlights);
+    border: 2px solid #c5c6c7;
     border-radius: 15px;
     min-width: 130px;
     padding: 5px 20px 5px 20px;
 }
 
 .button.blue {
-    background-color: var(--primary);
-    border-color: var(--primary);
-    color: var(--darkest);
+    background-color: #66fcf1;
+    border-color: #66fcf1;
+    color: #121212;
 }
 
 .borderBottom {
-    border-bottom: 1px solid var(--highlights);
+    border-bottom: 1px solid #c5c6c7;
 }
 
 .trackListContainer h2,
@@ -418,7 +418,7 @@ body {
 }
 
 .searchContainer {
-    background-color: var(--second-dark);
+    background-color: rgba(255, 255, 255, .1);
     padding: 20px 28px;
 }
 
@@ -451,7 +451,7 @@ button:focus {
 }
 
 .searchResultRow:hover {
-    background-color: var(--second-dark);
+    background-color: rgba(255, 255, 255, .1);
 }
 
 .searchResultRow artistName span {
@@ -473,7 +473,7 @@ button:focus {
 }
 
 .playlistImage {
-    border: 3px solid var(--highlights);
+    border: 3px solid #c5c6c7;
     padding: 10px;
 }
 
@@ -483,7 +483,7 @@ button:focus {
 
 .optionsMenu {
     position: fixed;
-    background-color: var(--second-dark);
+    background-color: rgba(255, 255, 255, .1);
     width: 200;
     border: 1px solid rgba(0, 0, 0, 0.15);
     border-radius: 3px;
@@ -496,17 +496,17 @@ button:focus {
     padding: 12px 20px;
     box-sizing: border-box;
     font-weight: 400;
-    color: var(--highlights);
+    color: #c5c6c7;
     cursor: pointer;
     height: 40px;
-    background-color: var(--second-dark);
+    background-color: rgba(255, 255, 255, .1);
     font-size: 14px;
 }
 
 .optionsMenu .item:hover {
     color: #fff;
-    background-color: var(--darkest);
-    border-color: var(--darkest);
+    background-color: #000000;
+    border-color: #000000;
 }
 
 .optionsMenu select {
@@ -538,7 +538,7 @@ button:focus {
 .userDetails .container input[type="password"] {
     height: 50px;
     width: 100%;
-    background: #5d6d81;
+    background: rgba(255, 255, 255, .1);
     border: none;
     font-size: 18px;
     font-weight: 300;
@@ -546,6 +546,6 @@ button:focus {
 }
 
 .userDetails .container .message {
-    color: var(--primary);
+    color: #66fcf1;
     font-weight: 300;
 }
