--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -22,7 +22,7 @@ html, body {
     background-image: linear-gradient(225deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%);
      */   
      /* Single Color Background */
-    background-color: var(--second-dark);
+    background-color: #121212;
 
     background-position: center;
     background-size: cover;
@@ -32,7 +32,7 @@ html, body {
 }
 
 #loginContainer * {
-    color: var(--highlights);
+    color: #fff;
     font-family: "Quicksand";
     font-weight: normal;
     line-height: 1em;
@@ -47,19 +47,19 @@ html, body {
 }
 
 ::placeholder { /* Most modern browsers support this now. */
-   color: var(--highlights);
+   color: rgba(255, 255, 255, 0.5);
 }
 
 #inputContainer {
     width: 400px;
     padding: 45px;
     float: left;
-    border-right: 1px solid var(--darkest);
+    border-right: 1px solid #000000;
 }
 
 #inputContainer h2 {
     text-align: center;
-    color: var(--highlights);
+    color: rgba(255, 255, 255, 1);
 }
 
 #inputContainer input[type='text'],
@@ -68,7 +68,7 @@ html, body {
     display: block;
     background-color: transparent;
     border: none;
-    border-bottom: 1px solid var(--secondary);
+    border-bottom: 1px solid #45a29e;
     width: 100%;
     height: 27px;
     line-height: 27px;
@@ -78,11 +78,11 @@ html, body {
 #inputContainer input[type='email']:focus,
 #inputContainer input[type='password']:focus {
     border: none;
-    outline: 1px solid var(--secondary);
+    outline: 1px solid #45a29e;
 }
 
 #inputContainer label {
-    color: var(--primary);
+    color: #66fcf1;
     font-size: 13px;
     margin-top: 15px;
     display: block;
@@ -109,9 +109,9 @@ html, body {
 
 #inputContainer button{
     background-color: transparent;
-    border: 2px solid var(--primary);
+    border: 2px solid #66fcf1;
     border-radius: 3rem;
-    color: var(--highlights);
+    color: #fff;
     font-size: 14px;
     overflow: hidden;
     /* padding: 1rem 2rem; */
@@ -128,7 +128,7 @@ html, body {
 
 }
 #inputContainer button::after {
-    background-color: var(--primary);
+    background-color: #66fcf1;
     border-radius: 3rem;
     content: '';
     display: block;
@@ -150,7 +150,7 @@ html, body {
 
 #inputContainer button:hover {
     border: 2px solid transparent;
-    color: var(--darkest);
+    color: #121212;
     transform: scale(1.05);
     will-change: transform;
 }
@@ -165,7 +165,7 @@ html, body {
 
 #hideRegister:hover,
 #hideLogin:hover {
-    color: var(--secondary);
+    color: #45a29e;
 }
 
 .hasAccountText span {
@@ -189,7 +189,7 @@ html, body {
 }
 
 #loginText h1 {
-    color: var(--primary);
+    color: #66fcf1;
     font-size: 60px;
     font-weight: bold;
 }
@@ -210,7 +210,7 @@ html, body {
 }
 
 #inputContainer .errorMessage {
-    color: var(--highlights);
+    color: rgba(255, 255, 255, 0.5);
     font-size: 12px;
     display: block;
 }
