--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,11 @@
-:root {
+/* :root {
   --background: #0b0c10;
   --second-dark: #1f2833;
   --third-dark: #435060;
   --highlights: #c5c6c7;
   --primary: #66fcf1;
   --secondary: #45a29e;
-}
+} */
 
 html, body {
     padding: 0;
